--- a/cv.html
+++ b/cv.html
@@ -3,53 +3,109 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Défilement sur Mobile</title>
+    <title>Darconex</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/x-styles.css">
+    <link rel="icon" href="img/logo.png" title="logo">
+    <script src="js/script.js"></script>
     <style>
-        html {
-            scroll-behavior: smooth;
+        html, body {
+            height: 100%;
+            margin: 0;
+            display: flex;
+            flex-direction: column;
         }
         body {
-            margin: 0;
-            font-family: Arial, sans-serif;
-            overflow-y: scroll;
-            -webkit-overflow-scrolling: touch; /* Smooth scrolling for iOS */
+            flex: 1;
         }
-        .scrollable-content {
-            height: 300px; /* Fixed height */
-            overflow-y: auto;
-            background-color: #f4f4f4;
+        .nav-link-disabled {
+            color: inherit;
+            text-decoration: none;
+            cursor: default;
+        }
+        footer {
+            text-align: center;
             padding: 10px;
-            -webkit-overflow-scrolling: touch; /* Ensures smooth scrolling on mobile */
+            background-color: #403f3f;
+            font-size: 0.9em;
+            position: relative;
+            bottom: 0;
+            width: 100%;
         }
-        .section {
-            margin-bottom: 20px;
+        .content {
+            flex: 1;
+            padding: 20px;
+        }
+        .cv-section {
+            margin: 20px 0;
+        }
+        h2 {
+            color: #333;
+        }
+        ul {
+            list-style-type: disc;
+            margin-left: 20px;
         }
     </style>
 </head>
 <body>
-
     <header>
-        <h1>Défilement avec le doigt</h1>
+        <div class="light"></div>
+        <nav class="navbar">
+            <ul class="nav-list">
+                <li class="nav-item"><a href="https://darconex.github.io" class="nav-link">Accueil</a></li>
+                <li class="nav-item">
+                    <span class="nav-link nav-link-disabled">Cyber</span>
+                    <ul class="sub-menu">
+                        <li class="sub-item"><a href="https://darconex.github.io/groups/cyber" class="sub-link">Data Cyber</a></li>
+                        <li class="sub-item"><a href="https://darconex.github.io/groups/team" class="sub-link">Team</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item"><a href="https://darconex.com" class="nav-link">Pro</a></li>
+                <li class="nav-item">
+                    <span class="nav-link nav-link-disabled">À Propos</span>
+                    <ul class="sub-menu">
+                        <li class="sub-item"><a href="https://darconex.github.io/charte.html" class="sub-link">Charte</a></li>
+                        <li class="sub-item"><a href="https://darconex.github.io/loi-cybersecurite.html" class="sub-link">Loi sur la cybersécurité</a></li>
+                        <li class="sub-item"><a href="https://darconex.github.io/formation.html" class="sub-link">Formation</a></li>
+                        <li class="sub-item"><a href="https://darconex.github.io/certificat.html" class="sub-link">Certificat</a></li>
+                        <li class="sub-item"><a href="https://darconex.github.io/cv.html" class="sub-link">CV</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
+            </ul>
+        </nav>
     </header>
-
-    <div class="scrollable-content">
-        <div class="section">
-            <h2>Section 1</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ac lorem nunc. Nullam non dui a justo gravida vehicula.</p>
-        </div>
-        <div class="section">
-            <h2>Section 2</h2>
-            <p>Aliquam erat volutpat. Donec aliquet felis sed enim sagittis vehicula. Suspendisse potenti.</p>
-        </div>
-        <div class="section">
-            <h2>Section 3</h2>
-            <p>Vivamus fringilla turpis ut arcu tincidunt, at ullamcorper eros accumsan.</p>
-        </div>
-        <div class="section">
-            <h2>Section 4</h2>
-            <p>Mauris consequat ligula ut felis varius, ut vestibulum purus egestas.</p>
+    <div class="content">
+        <h2>CV - Analyste SOC / Cybersécurité</h2>
+        <div class="cv-section">
+            <h3>Expérience</h3>
+            <p><strong>Analyste SOC / Cybersécurité</strong> <br> CDI - De avr. 2022 à aujourd’hui · 2 ans 6 mois <br> Paris · Hybride</p>
+            <ul>
+                <li>SOC Analyste N2</li>
+                <ul>
+                    <li>Traitement des alertes de sécurité</li>
+                    <li>Analyse, qualification et réponse aux incidents de sécurité</li>
+                    <li>Technologies éditeurs (SIEM, EPP, EDR, Protection de la messagerie et scanner de vulnérabilités)</li>
+                    <li>Investigation sur Open Source Intelligence (OSINT)</li>
+                    <li>Cyber Threat Intelligence / Threat Hunting</li>
+                    <li>Gestion de crise</li>
+                    <li>Astreinte pour le N1</li>
+                </ul>
+                <li>Projet et Intégration</li>
+                <ul>
+                    <li>Création de Template, procédure et documents techniques</li>
+                    <li>Mise en place d'un journal sur l'intranet (CyberVeille, Alerte CVE, Cyber Actu, Patch Tuesday)</li>
+                </ul>
+                <li>Technologies utilisées :</li>
+                <ul>
+                    <li>Tehtris, Sophos, Azure AD, Microsoft Defender, Vade Cloud, Graylog, TheHive, Elastic, Withsecure, LogPoint, CrowdStrike, Q-Radar, HarfangLab, Riot, Cyberwatch</li>
+                </ul>
+            </ul>
         </div>
     </div>
-
+    <footer>
+        &copy; 2024 Darconex. Tous droits réservés.
+    </footer>
 </body>
 </html>
